Se agrega método para consultar la vigencia con estado actual.
